[improve][xs]: multiple selected item cross icon alignment fixed

--- a/ckanext/rvr/assets/css/rvr.css
+++ b/ckanext/rvr/assets/css/rvr.css
@@ -77,6 +77,12 @@ section.module div.module-content table.table.table-striped.table-bordered.table
     font-size:14px;
 }
 
+.select2-search-choice-close,
+.select2-container-multi .select2-search-choice-close {
+  top: 4px;
+  left: 5px;
+}
+
 .multi-arrow::before { 
 	content: '';
     width: 18px;
